-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
Server Serverless 2022-04-04
-
142
-
None
-
None
-
None
-
None
-
None
-
None
-
None
We recently added a logic when stopping the BasicServerlessTest to stop and remove the recipient nodes prior to stopping the donor replica set.
The validation is however not skipped only for the recipient which causes a potential race condition where the tenant access blockers are not removed and rejects the validation of the collections prior to stopping the recipient node.
The issue appears because we fail to remove tenant access blockers prior to stopping the replSet which leads to the re routing issues as the tenant access blockers are rejecting reads and writes.
This can be fixed by waiting for garbage collection to happen on both the donors and the recipients.
When doing the garbage collection on the recipient side there was an issue related to the synch source missing as the recipient would get their state document replicated from their old primary as a new primary wasn't elected yet for the recipients.