SERVER-64661 Fix validation on shutdown failing due to a re routing issue.